--- a/themes/default/layouts/partials/head.html
+++ b/themes/default/layouts/partials/head.html
@@ -3,4 +3,5 @@
 <title>{{ title }} - {{ site.title }}</title>
 <meta name="description" content="{{ description }}">
 
-{{ auto_css }}
+<link rel="stylesheet" href="/assets/css/style.css">
+<link rel="stylesheet" href="/assets/css/custom.css">
