--- a/exampleSite/layouts/partials/footer.html
+++ b/exampleSite/layouts/partials/footer.html
@@ -1,4 +1,4 @@
 <footer class="site-footer">
-  <p>🚀 Custom Footer - Powered by <a href="https://github.com/lapis-lang/lapis">Lapis</a> v0.2.0 with Hugo-style partials!</p>
+  <p>🚀 Custom Footer - Powered by <a href="https://github.com/lapis-lang/lapis">Lapis</a> v0.4.0 with advanced partials!</p>
   <p><small>Built with ❤️ using Crystal</small></p>
 </footer>
